[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sawtooth-memory"
version = "0.1.0"
description = "Async context manager middleware for LLM agents — solves Lost in the Middle via local Ollama compression."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agents", "context", "memory", "middleware", "ollama"]

dependencies = [
    "pydantic>=2.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["sawtooth_memory"]
